// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Studio can create records 1`] = `
Object {
  "action": "clientRequest",
  "channel": "-prisma",
  "payload": Object {
    "data": Object {
      "params": Object {
        "action": "create",
        "args": Object {
          "data": Object {
            "email": "email3@test.com",
            "id": 3,
            "name": "Name 3",
          },
        },
        "dataPath": Array [],
        "model": "User",
        "runInTransaction": false,
      },
      "response": Object {
        "email": "email3@test.com",
        "id": 3,
        "name": "Name 3",
      },
    },
    "error": null,
  },
  "requestId": 1,
}
`;

exports[`Studio can create records 2`] = `
Object {
  "action": "clientRequest",
  "channel": "-prisma",
  "payload": Object {
    "data": Object {
      "params": Object {
        "action": "findUnique",
        "args": Object {
          "where": Object {
            "id": 3,
          },
        },
        "dataPath": Array [],
        "model": "User",
        "runInTransaction": false,
      },
      "response": Object {
        "email": "email3@test.com",
        "id": 3,
        "name": "Name 3",
      },
    },
    "error": null,
  },
  "requestId": 1,
}
`;

exports[`Studio can delete records 1`] = `
Object {
  "action": "clientRequest",
  "channel": "-prisma",
  "payload": Object {
    "data": Object {
      "params": Object {
        "action": "delete",
        "args": Object {
          "where": Object {
            "id": 2,
          },
        },
        "dataPath": Array [],
        "model": "User",
        "runInTransaction": false,
      },
      "response": Object {
        "email": "email2@test.com",
        "id": 2,
        "name": "Name 2",
      },
    },
    "error": null,
  },
  "requestId": 1,
}
`;

exports[`Studio can delete records 2`] = `
Object {
  "action": "clientRequest",
  "channel": "-prisma",
  "payload": Object {
    "data": Object {
      "params": Object {
        "action": "findUnique",
        "args": Object {
          "where": Object {
            "id": 2,
          },
        },
        "dataPath": Array [],
        "model": "User",
        "runInTransaction": false,
      },
      "response": null,
    },
    "error": null,
  },
  "requestId": 1,
}
`;

exports[`Studio can make queries 1`] = `
Object {
  "action": "clientRequest",
  "channel": "-prisma",
  "payload": Object {
    "data": Object {
      "params": Object {
        "action": "findMany",
        "args": Object {},
        "dataPath": Array [],
        "model": "User",
        "runInTransaction": false,
      },
      "response": Array [
        Object {
          "email": "email1@test.com",
          "id": 1,
          "name": "Name 1",
        },
        Object {
          "email": "email2@test.com",
          "id": 2,
          "name": "Name 2",
        },
      ],
    },
    "error": null,
  },
  "requestId": 1,
}
`;

exports[`Studio can update records 1`] = `
Object {
  "action": "clientRequest",
  "channel": "-prisma",
  "payload": Object {
    "data": Object {
      "params": Object {
        "action": "update",
        "args": Object {
          "data": Object {
            "name": "Updated Name 1",
          },
          "where": Object {
            "id": 1,
          },
        },
        "dataPath": Array [],
        "model": "User",
        "runInTransaction": false,
      },
      "response": Object {
        "email": "email1@test.com",
        "id": 1,
        "name": "Updated Name 1",
      },
    },
    "error": null,
  },
  "requestId": 1,
}
`;

exports[`Studio can update records 2`] = `
Object {
  "action": "clientRequest",
  "channel": "-prisma",
  "payload": Object {
    "data": Object {
      "params": Object {
        "action": "findUnique",
        "args": Object {
          "where": Object {
            "id": 1,
          },
        },
        "dataPath": Array [],
        "model": "User",
        "runInTransaction": false,
      },
      "response": Object {
        "email": "email1@test.com",
        "id": 1,
        "name": "Updated Name 1",
      },
    },
    "error": null,
  },
  "requestId": 1,
}
`;
